--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,16 +2,22 @@ body {
     background-color: lightgrey;
 }
 
-.main-content {
-    width: 960px;
-    margin: 0 auto;
-    background-color: lightslategray
+.page-content {
+    height: 95%;
 }
 
 header {
     width: 100%;
-    height: 60px;
+    height: 78px;
     background-color: white;
+}
+
+.name {
+    color: white;
+    background-color: #4aaaa5;
+    padding: 15px;
+    margin-top: -10px;
+    margin-left: -13px;
 }
 
 .navbar {
@@ -19,20 +25,66 @@ header {
     padding:0;
     margin: 0 auto;
 }
-.name {
-    color: white;
-    background-color: #4aaaa5;
+
+a {
+    color: #999;
+}
+
+.container-fluid {
+    margin-top: 10px;
+}
+
+.main-content {
+    width: 960px;
+    margin: 0 auto;
+    padding-bottom: 20px;
+    background-color: white;
+    display: block;
+}
+
+.row {
+    display: block;
+    margin: 0 auto;
 }
 
 .about-me {
     color: #4aaaa5;
-}
-
-.main-content {
-    margin-top: 20px;
-    background-color: white;
+    margin-left: 10px;
+    padding: 15px;
+    border-bottom: 3px solid #dddddd
 }
 
 .self-pic{
     float: left;
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
+
+p {
+    font-size: 20px;
+    line-height: 30px;
+    margin-left: 20px;
+    margin-top: 20px;
+    color: #777777;
+}
+
+.para1 {
+    margin-left: 20px;
+    right: 0px;
+    top: 20px;
+}
+
+footer {
+    clear: both;
+    font-size: 12px;
+    color: #cccccc;
+    text-align: center;
+    background: #666666;
+    border-top: 8px solid #4aaaa5;
+    height: 50px;
+    display: block;
+    position: fixed;
+    bottom:0;
+    width: 100%;
+  }
