--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,41 +1,77 @@
-body {
-    background-color: lightgrey;
+
+* {
+    box-sizing: border-box;
 }
 
-.page-content {
-    height: 95%;
+html {
+    display: block;
+}
+
+body {
+    background-color: lightgrey;
 }
 
 header {
     width: 100%;
     height: 78px;
     background-color: white;
+    overflow: auto;
 }
 
 .name {
     color: white;
     background-color: #4aaaa5;
-    padding: 15px;
+    padding: 21px;
     margin-top: -10px;
-    margin-left: -13px;
+    margin-left: -7px;
 }
 
 .navbar {
-    width: 960px;
+    width: 100%;
+    max-width: 960px;
     padding:0;
     margin: 0 auto;
+    text-align: right;
+}
+
+h1 {
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-weight: 700;
+    font-size: 30px;
 }
 
 a {
     color: #999;
 }
 
+a:link {
+    text-decoration-line: none;
+}
+
+footer {
+    clear: both;
+    font-size: 12px;
+    color: #cccccc;
+    text-align: center;
+    background: #666666;
+    border-top: 8px solid #4aaaa5;
+    height: 50px;
+    display: block;
+    position: fixed;
+    bottom:0;
+    width: 100%;
+}
+
+
+/* index.html */
+
 .container-fluid {
     margin-top: 10px;
 }
 
 .main-content {
-    width: 960px;
+    width: 100%;
+    max-width: 960px;
     margin: 0 auto;
     padding-bottom: 20px;
     background-color: white;
@@ -69,22 +105,32 @@ p {
     color: #777777;
 }
 
-.para1 {
-    margin-left: 20px;
-    right: 0px;
-    top: 20px;
+/* portfolio.html */
+
+.work-links {
+    display: flex;
+    flex-wrap: wrap;
 }
 
-footer {
-    clear: both;
-    font-size: 12px;
-    color: #cccccc;
-    text-align: center;
-    background: #666666;
-    border-top: 8px solid #4aaaa5;
-    height: 50px;
-    display: block;
-    position: fixed;
-    bottom:0;
+.icon-cont {
+    position: relative;
+    margin: 40px;
+}
+
+.icons {
+    opacity: 0.8;
+}
+
+.icon-name {
+    position: absolute;
+    bottom: 20px;
     width: 100%;
-  }
+    padding: 5px;
+    margin: 0 auto;
+    font-weight: 300;
+    line-height: 30px;
+    color: #ffffff;
+    text-align: center;
+    background: #4aaaa5;
+    border-bottom: 0;
+}
