--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,13 +9,13 @@ html {
 
 body {
     background-color: lightgrey;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 header {
     width: 100%;
-    height: 78px;
+    height: 68px;
     background-color: white;
-    overflow: auto;
 }
 
 .name {
@@ -23,7 +23,7 @@ header {
     background-color: #4aaaa5;
     padding: 21px;
     margin-top: -10px;
-    margin-left: -7px;
+    margin-left: -15px;
 }
 
 .navbar {
@@ -62,12 +62,12 @@ footer {
     width: 100%;
 }
 
+.container2 {
+    margin-top: 60px;
+}
+
 
 /* index.html */
-
-.container-fluid {
-    margin-top: 10px;
-}
 
 .main-content {
     width: 100%;
@@ -133,4 +133,32 @@ p {
     text-align: center;
     background: #4aaaa5;
     border-bottom: 0;
+}
+
+/* contact.html */
+
+.contact-form {
+    margin-left: 40px;
+    margin-right: 40px;
+    font-size: 18px;
+    line-height: 34px;
+    color: #777777;
+}
+
+ul.contact-list {
+    list-style-type: disc;
+}
+
+#message {
+    height: 80px;
+}
+
+.btn-primary {
+    padding: 10px 30px;
+    font-size: 18px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: #ffffff;
+    cursor: pointer;
+    background: #4aaaa5;
+    border: 0 none;
 }
